crates/ars-components/src/layout/snapshots/ars_components__layout__center__tests__center_root_default.snap
---
source: crates/ars-components/src/layout/center.rs
expression: "snapshot_attrs(&Api::new(Props::new(), false, None).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "center",
            ),
        ),
    ],
    styles: [],
}
